# nbodies

./: Cargo.toml
src/: main.rs
